# game_library_manager

./: .gitignore  Dockerfile  compose.yaml  entrypoint.prod.sh  generate_certs.sh  main.py  pyproject.toml
game_library_manager/: manage.py
game_library_manager/api/: serializers.py  urls.py  views.py
game_library_manager/auth/: serializers.py  urls.py  views.py
game_library_manager/core/: admin.py  models.py
game_library_manager/core/migrations/: 0001_initial.py
game_library_manager/game_library_manager/: asgi.py  settings.py  urls.py  wsgi.py
traefik/: traefik.yaml
traefik/dynamic/: tls.yaml
